--- a/about1.Rmd
+++ b/about1.Rmd
@@ -1,17 +1,15 @@
 ---
 title: "About"
-author: "Abhik Seal and Christopher Peters"  
-date: "June 26, 2015"
+author: "Abhik Seal & Chris Peters"
+date: "June 27, 2015"
 output: html_document
 ---
 
-Prescriptions help millions live healthier lives daily, but they can also have adverse side-effects. Only you and your doctors can determine if the benefit of taking a drug outweighs the associated risks. The benefits of drugs are commonly sold in television commercials and magazine advertisements, and while ads for drugs are required to list common adverse side-effects they aren't given the same level of attention as benefits.
-
-This dashboard doesn't contain counts of doses for each drug, so it's not possible with this data to understand the relative risks of drugs presented here. However, it is possible to look at distribution of outcomes of adverse events, see how many people are affected by adverse drugs and the ways they're affected.
-
-My hope is that this dashboard will be a first step to make the FDA's adverse event monitoring data more accessible to the public. If you're interested and able to help develop the dashbaord, checkout its source code: [https://github.com/statwonk/openfda-dashboard](https://github.com/statwonk/openfda-dashboard) all contributions no matter how large or small are welcome.
+**Welcome!** to FDA FAERS dashboard. It helps to make important drug reaction data accessible to the public and scientist.
 
 
-There are
+<i>NOTE :</i> This dashboard doesn't contain counts of doses for each drug, so it's not possible with this data to understand the relative risks of drugs presented here. However, it is possible to look at distribution of outcomes of adverse events, see how many people are affected by adverse drugs and the ways they're affected.
 
-265,974 deaths
+<i>Note: the FDA <a href="http://www.fda.gov/Drugs/GuidanceComplianceRegulatoryInformation/Surveillance/AdverseDrugEffects/ucm070461.htm">reports 117,752 deaths in the database in just 2013</a>, so the number above [may even understate the total number of deaths from advese events](https://api.fda.gov/drug/event.json?search=&count=patient.reaction.reactionoutcome).</i>
+
+
